Added Javadoc, new README.md, minor improvements